--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "m-parallel-test-runner",
-  "version": "1.0.935",
+  "version": "1.0.941",
   "description": "A tool to run Angular tests in parallel",
   "main": "index.js",
   "type": "module",
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "concurrently": "^7.0.0",
+    "find-process": "^1.4.7",
     "kill-port": "^2.0.1",
     "p-queue": "^8.0.1"
   },
