--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "m-parallel-test-runner",
-  "version": "1.0.946",
+  "name": "test-parallel-test-runner",
+  "version": "0.0.001",
   "description": "A tool to run Angular tests in parallel",
   "main": "index.js",
   "type": "module",
   "bin": {
-    "m-parallel-test-runner": "./index.js"
+    "test-parallel-test-runner": "./index.js"
   },
   "scripts": {
     "test": "node index.js"
   },
   "dependencies": {
+    "chalk": "^5.3.0",
     "concurrently": "^7.0.0",
     "find-process": "^1.4.7",
     "p-queue": "^8.0.1"
@@ -18,6 +19,6 @@
   "author": "Mahdi Hajian",
   "license": "MIT",
   "repository": {
-    "url": "https://github.com/mahdi-hajian/m-parallel-test-runner"
+    "url": "https://github.com/mahdi-hajian/angular-parallel-test-runner"
   }
 }
